schedule days flex align fix

--- a/src/components/attendee/ScheduleOverlay/ScheduleOverlay.module.scss
+++ b/src/components/attendee/ScheduleOverlay/ScheduleOverlay.module.scss
@@ -56,7 +56,7 @@
 .scheduleDays {
   width: 90%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   overflow-x: auto;
 
   button:first-child {
